syntax = "proto3";

package ChittyChat;

option go_package = "proto/proto";

message ChatMessage {
    string userID = 1;
    string content = 2;
    int64 timeStamp = 3;
    string user_name = 4;
}

message User {
    string id = 1;
    string name = 2;
    int64 usertime = 3;
}

message Connect {
    User user = 1;
    bool status_message = 2;
}

message Close{}

service ChittyChat {
    rpc Join(Connect) returns (stream ChatMessage);
    rpc Publish(ChatMessage) returns (Close);
    rpc Leave(Connect) returns ( stream ChatMessage);
}